<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@drawable/fill"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity" >
    
     <TextView
         android:id="@+id/kolicina_txt_r"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|center_horizontal"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:padding="30dp"
         android:paddingBottom="150dp"
         android:text="@string/log_txt_str"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/btn_t_color"
         android:textStyle="bold" />

     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50dp"
         android:layout_marginTop="20dp"
         android:onClick="copyDB"
         android:src="@drawable/zlogotranspsiva" />

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" >

        <TextView
            android:id="@+id/masi_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:paddingRight="@dimen/txt_padding_rigth"
            android:text="@string/user_txt_str"
            android:textColor="@color/btn_t_color"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/btn_b_color"
            android:textStyle="bold" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal" >

        <TextView
            android:id="@+id/ime_txt_r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:paddingRight="@dimen/txt_padding_rigth"
            android:text="@string/password_txt_str"
            android:textColor="@color/btn_t_color"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="3dp"
            android:paddingLeft="10dp"
            android:textColor="@color/btn_t_color"
            android:textStyle="bold" />

    </TableRow>

<!--     <TableRow -->
<!--         android:id="@+id/tableRow3" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:gravity="right" > -->

<!--     </TableRow> -->

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal" >

            <Button
                android:id="@+id/izlez_btn_pod"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/btn_b_color"
                android:onClick="clickIzlezMain"
                android:text="@string/izlez_btn_str"
                android:textColor="@color/btn_t_color"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_sett_start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:background="@color/btn_b_color"
                android:minHeight="50dp"
                android:minWidth="90dp"
                android:onClick="onClick"
                android:text="@string/ok_btn_str"
                android:textColor="@color/btn_t_color"
                android:textStyle="bold" />

        </TableRow>

</TableLayout>